refactor project structure and add warehouse module